--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
     "axios": "^0.22.0",
     "base-64": "^1.0.0",
     "crypto-js": "^4.1.1",
-    "expo": "~42.0.1",
+    "expo": "^1.0.0",
     "expo-barcode-scanner": "~10.2.2",
     "expo-status-bar": "~1.0.4",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-crypto-js": "^1.0.0",
     "react-native-gesture-handler": "~1.10.2",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "^0.17.5"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
